// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormHelperText LoginFooterItem  with custom node 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-form__helper-text"
  >
    <div>
      My custom node
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormHelperText className is added to the root element 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-form__helper-text extra-class"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`FormHelperText renders with PatternFly Core styles 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-form__helper-text"
  >
    test
  </div>
</DocumentFragment>
`;
